[package]
name = "vinsteon"
version = "0.1.0"
authors = ["vjeko"]

[dependencies]
num = "0.1"
tokio-serial = "0.5"
tokio-core = "0.1"
tokio-io = "0.1"
bytes = "0.4"
protobuf = "1.4.1"
futures = "0.*"
futures-cpupool = "0.1.*"
tls-api = "0.*"
grpc = "0.1.11"
log = "0.3"
env_logger = "0.3"
bincode = "0.8.0"
serde = "1.0.9"
serde_derive = "1.0.9"
phf_macros = "0.7.21"
phf = "0.7.21"
setenv = "0.1.1"