[package]
name = "vinsteon"
version = "0.1.0"
authors = ["vjeko"]

[dependencies]
num = "0.1"
tokio-serial = "3.0"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-codec = "0.1"
tokio-timer = "0.2"
tokio-reactor = "0.1"
bytes = "0.4"
grpc = "0.2.1"
protobuf = "1.4.1"
futures = "0.*"
futures-cpupool = "0.1.*"
tls-api = "0.*"
log = "0.3"
env_logger = "0.3"
bincode = "0.8.0"
serde = "1.0.9"
serde_derive = "1.0.9"
serde_json = "1.0.2"
phf_macros = "0.7.21"
phf = "0.7.21"
setenv = "0.1.1"
bus = "1.3.1"
RobotS = "0.3.0"
